src/parse/parser/snapshots/geam__parse__parser__tests__accept_labeled_call_arguments.snap
---
source: src/parse/parser/tests.rs
expression: "parse(r#\"\npub fn main(user) {\n  display(message: user.name, suffix: \"ok\")\n}\n\"#)"
---
Module {
    name: "test/module",
    path: "test/module.gleam",
    documentation: [],
    type_info: (),
    definitions: [
        Function(
            Function {
                location: SrcSpan {
                    start: 5,
                    end: 12,
                },
                body_start: Some(
                    19,
                ),
                end_position: 66,
                name: Some(
                    (
                        SrcSpan {
                            start: 8,
                            end: 12,
                        },
                        "main",
                    ),
                ),
                arguments: [
                    Arg {
                        location: SrcSpan {
                            start: 13,
                            end: 17,
                        },
                        name: (
                            SrcSpan {
                                start: 13,
                                end: 17,
                            },
                            "user",
                        ),
                        annotation: None,
                        type_: (),
                    },
                ],
                body: [
                    Expression(
                        Call {
                            location: SrcSpan {
                                start: 23,
                                end: 64,
                            },
                            fun: Var {
                                location: SrcSpan {
                                    start: 23,
                                    end: 30,
                                },
                                name: "display",
                            },
                            arguments: [
                                CallArg {
                                    location: SrcSpan {
                                        start: 31,
                                        end: 49,
                                    },
                                    label: Some(
                                        (
                                            SrcSpan {
                                                start: 31,
                                                end: 38,
                                            },
                                            "message",
                                        ),
                                    ),
                                    value: FieldAccess {
                                        location: SrcSpan {
                                            start: 40,
                                            end: 49,
                                        },
                                        label_location: SrcSpan {
                                            start: 45,
                                            end: 49,
                                        },
                                        label: "name",
                                        container: Var {
                                            location: SrcSpan {
                                                start: 40,
                                                end: 44,
                                            },
                                            name: "user",
                                        },
                                    },
                                },
                                CallArg {
                                    location: SrcSpan {
                                        start: 51,
                                        end: 63,
                                    },
                                    label: Some(
                                        (
                                            SrcSpan {
                                                start: 51,
                                                end: 57,
                                            },
                                            "suffix",
                                        ),
                                    ),
                                    value: String {
                                        location: SrcSpan {
                                            start: 59,
                                            end: 63,
                                        },
                                        value: "ok",
                                    },
                                },
                            ],
                            open_parenthesis: 30,
                        },
                    ),
                ],
                publicity: Public,
                return_annotation: None,
                return_type: (),
            },
        ),
    ],
}
