src/parse/parser/snapshots/geam__parse__parser__tests__accept_literals_blocks_and_unary.snap
---
source: src/parse/parser/tests.rs
expression: "parse(r#\"\npub fn main(flag) {\n  {\n    -1\n    !flag\n    1.5\n  }\n}\n\"#)"
---
Module {
    name: "test/module",
    path: "test/module.gleam",
    documentation: [],
    type_info: (),
    definitions: [
        Function(
            Function {
                location: SrcSpan {
                    start: 5,
                    end: 12,
                },
                body_start: Some(
                    19,
                ),
                end_position: 55,
                name: Some(
                    (
                        SrcSpan {
                            start: 8,
                            end: 12,
                        },
                        "main",
                    ),
                ),
                arguments: [
                    Arg {
                        location: SrcSpan {
                            start: 13,
                            end: 17,
                        },
                        name: (
                            SrcSpan {
                                start: 13,
                                end: 17,
                            },
                            "flag",
                        ),
                        annotation: None,
                        type_: (),
                    },
                ],
                body: [
                    Expression(
                        Block {
                            location: SrcSpan {
                                start: 23,
                                end: 53,
                            },
                            statements: [
                                Expression(
                                    NegateInt {
                                        location: SrcSpan {
                                            start: 29,
                                            end: 31,
                                        },
                                        value: Int {
                                            location: SrcSpan {
                                                start: 30,
                                                end: 31,
                                            },
                                            value: "1",
                                            int_value: 1,
                                        },
                                    },
                                ),
                                Expression(
                                    NegateBool {
                                        location: SrcSpan {
                                            start: 36,
                                            end: 41,
                                        },
                                        value: Var {
                                            location: SrcSpan {
                                                start: 37,
                                                end: 41,
                                            },
                                            name: "flag",
                                        },
                                    },
                                ),
                                Expression(
                                    Float {
                                        location: SrcSpan {
                                            start: 46,
                                            end: 49,
                                        },
                                        value: "1.5",
                                    },
                                ),
                            ],
                        },
                    ),
                ],
                publicity: Public,
                return_annotation: None,
                return_type: (),
            },
        ),
    ],
}
