src/parse/parser/snapshots/geam__parse__parser__tests__accept_multiline_call_arguments_and_parentheses.snap
---
source: src/parse/parser/tests.rs
expression: "parse(r#\"\npub fn main(user) {\n  display(\n    (\n      user\n    ),\n    \"ok\"\n  )\n}\n\"#)"
---
Module {
    name: "test/module",
    path: "test/module.gleam",
    documentation: [],
    type_info: (),
    definitions: [
        Function(
            Function {
                location: SrcSpan {
                    start: 5,
                    end: 12,
                },
                body_start: Some(
                    19,
                ),
                end_position: 70,
                name: Some(
                    (
                        SrcSpan {
                            start: 8,
                            end: 12,
                        },
                        "main",
                    ),
                ),
                arguments: [
                    Arg {
                        location: SrcSpan {
                            start: 13,
                            end: 17,
                        },
                        name: (
                            SrcSpan {
                                start: 13,
                                end: 17,
                            },
                            "user",
                        ),
                        annotation: None,
                        type_: (),
                    },
                ],
                body: [
                    Expression(
                        Call {
                            location: SrcSpan {
                                start: 23,
                                end: 68,
                            },
                            fun: Var {
                                location: SrcSpan {
                                    start: 23,
                                    end: 30,
                                },
                                name: "display",
                            },
                            arguments: [
                                CallArg {
                                    location: SrcSpan {
                                        start: 44,
                                        end: 48,
                                    },
                                    label: None,
                                    value: Var {
                                        location: SrcSpan {
                                            start: 44,
                                            end: 48,
                                        },
                                        name: "user",
                                    },
                                },
                                CallArg {
                                    location: SrcSpan {
                                        start: 60,
                                        end: 64,
                                    },
                                    label: None,
                                    value: String {
                                        location: SrcSpan {
                                            start: 60,
                                            end: 64,
                                        },
                                        value: "ok",
                                    },
                                },
                            ],
                            open_parenthesis: 30,
                        },
                    ),
                ],
                publicity: Public,
                return_annotation: None,
                return_type: (),
            },
        ),
    ],
}
