src/parse/parser/snapshots/geam__parse__parser__tests__accept_multiline_case_subjects.snap
---
source: src/parse/parser/tests.rs
expression: "parse(r#\"\npub fn compare(a, b) {\n  case a,\n    b {\n    x, y -> True\n  }\n}\n\"#)"
---
Module {
    name: "test/module",
    path: "test/module.gleam",
    documentation: [],
    type_info: (),
    definitions: [
        Function(
            Function {
                location: SrcSpan {
                    start: 5,
                    end: 15,
                },
                body_start: Some(
                    22,
                ),
                end_position: 64,
                name: Some(
                    (
                        SrcSpan {
                            start: 8,
                            end: 15,
                        },
                        "compare",
                    ),
                ),
                arguments: [
                    Arg {
                        location: SrcSpan {
                            start: 16,
                            end: 17,
                        },
                        name: (
                            SrcSpan {
                                start: 16,
                                end: 17,
                            },
                            "a",
                        ),
                        annotation: None,
                        type_: (),
                    },
                    Arg {
                        location: SrcSpan {
                            start: 19,
                            end: 20,
                        },
                        name: (
                            SrcSpan {
                                start: 19,
                                end: 20,
                            },
                            "b",
                        ),
                        annotation: None,
                        type_: (),
                    },
                ],
                body: [
                    Expression(
                        Case {
                            location: SrcSpan {
                                start: 26,
                                end: 62,
                            },
                            subjects: [
                                Var {
                                    location: SrcSpan {
                                        start: 31,
                                        end: 32,
                                    },
                                    name: "a",
                                },
                                Var {
                                    location: SrcSpan {
                                        start: 38,
                                        end: 39,
                                    },
                                    name: "b",
                                },
                            ],
                            clauses: [
                                Clause {
                                    location: SrcSpan {
                                        start: 46,
                                        end: 58,
                                    },
                                    pattern: [
                                        Variable {
                                            location: SrcSpan {
                                                start: 46,
                                                end: 47,
                                            },
                                            name: "x",
                                            type_: (),
                                        },
                                        Variable {
                                            location: SrcSpan {
                                                start: 49,
                                                end: 50,
                                            },
                                            name: "y",
                                            type_: (),
                                        },
                                    ],
                                    alternative_patterns: [],
                                    guard: None,
                                    then: Var {
                                        location: SrcSpan {
                                            start: 54,
                                            end: 58,
                                        },
                                        name: "True",
                                    },
                                },
                            ],
                        },
                    ),
                ],
                publicity: Public,
                return_annotation: None,
                return_type: (),
            },
        ),
    ],
}
