src/parse/parser/snapshots/geam__parse__parser__tests__accept_pattern_matrix.snap
---
source: src/parse/parser/tests.rs
expression: "parse(r#\"\npub fn describe(value) {\n  case value {\n    1.5 -> \"float\"\n    #(first, second) as pair -> \"tuple\"\n    [head, tail] -> \"list\"\n    Ok(value: inner) -> \"constructor\"\n    _ -> \"other\"\n  }\n}\n\"#)"
---
Module {
    name: "test/module",
    path: "test/module.gleam",
    documentation: [],
    type_info: (),
    definitions: [
        Function(
            Function {
                location: SrcSpan {
                    start: 5,
                    end: 16,
                },
                body_start: Some(
                    24,
                ),
                end_position: 187,
                name: Some(
                    (
                        SrcSpan {
                            start: 8,
                            end: 16,
                        },
                        "describe",
                    ),
                ),
                arguments: [
                    Arg {
                        location: SrcSpan {
                            start: 17,
                            end: 22,
                        },
                        name: (
                            SrcSpan {
                                start: 17,
                                end: 22,
                            },
                            "value",
                        ),
                        annotation: None,
                        type_: (),
                    },
                ],
                body: [
                    Expression(
                        Case {
                            location: SrcSpan {
                                start: 28,
                                end: 185,
                            },
                            subjects: [
                                Var {
                                    location: SrcSpan {
                                        start: 33,
                                        end: 38,
                                    },
                                    name: "value",
                                },
                            ],
                            clauses: [
                                Clause {
                                    location: SrcSpan {
                                        start: 45,
                                        end: 59,
                                    },
                                    pattern: [
                                        Float {
                                            location: SrcSpan {
                                                start: 45,
                                                end: 48,
                                            },
                                            value: "1.5",
                                        },
                                    ],
                                    alternative_patterns: [],
                                    guard: None,
                                    then: String {
                                        location: SrcSpan {
                                            start: 52,
                                            end: 59,
                                        },
                                        value: "float",
                                    },
                                },
                                Clause {
                                    location: SrcSpan {
                                        start: 84,
                                        end: 99,
                                    },
                                    pattern: [
                                        Assign {
                                            name: "pair",
                                            location: SrcSpan {
                                                start: 84,
                                                end: 88,
                                            },
                                            pattern: Tuple {
                                                location: SrcSpan {
                                                    start: 64,
                                                    end: 80,
                                                },
                                                elements: [
                                                    Variable {
                                                        location: SrcSpan {
                                                            start: 66,
                                                            end: 71,
                                                        },
                                                        name: "first",
                                                        type_: (),
                                                    },
                                                    Variable {
                                                        location: SrcSpan {
                                                            start: 73,
                                                            end: 79,
                                                        },
                                                        name: "second",
                                                        type_: (),
                                                    },
                                                ],
                                            },
                                        },
                                    ],
                                    alternative_patterns: [],
                                    guard: None,
                                    then: String {
                                        location: SrcSpan {
                                            start: 92,
                                            end: 99,
                                        },
                                        value: "tuple",
                                    },
                                },
                                Clause {
                                    location: SrcSpan {
                                        start: 104,
                                        end: 126,
                                    },
                                    pattern: [
                                        List {
                                            location: SrcSpan {
                                                start: 104,
                                                end: 116,
                                            },
                                            elements: [
                                                Variable {
                                                    location: SrcSpan {
                                                        start: 105,
                                                        end: 109,
                                                    },
                                                    name: "head",
                                                    type_: (),
                                                },
                                                Variable {
                                                    location: SrcSpan {
                                                        start: 111,
                                                        end: 115,
                                                    },
                                                    name: "tail",
                                                    type_: (),
                                                },
                                            ],
                                            type_: (),
                                        },
                                    ],
                                    alternative_patterns: [],
                                    guard: None,
                                    then: String {
                                        location: SrcSpan {
                                            start: 120,
                                            end: 126,
                                        },
                                        value: "list",
                                    },
                                },
                                Clause {
                                    location: SrcSpan {
                                        start: 131,
                                        end: 164,
                                    },
                                    pattern: [
                                        Constructor {
                                            location: SrcSpan {
                                                start: 131,
                                                end: 147,
                                            },
                                            name_location: SrcSpan {
                                                start: 131,
                                                end: 133,
                                            },
                                            name: "Ok",
                                            arguments: [
                                                CallArg {
                                                    location: SrcSpan {
                                                        start: 134,
                                                        end: 146,
                                                    },
                                                    label: Some(
                                                        (
                                                            SrcSpan {
                                                                start: 134,
                                                                end: 139,
                                                            },
                                                            "value",
                                                        ),
                                                    ),
                                                    value: Variable {
                                                        location: SrcSpan {
                                                            start: 141,
                                                            end: 146,
                                                        },
                                                        name: "inner",
                                                        type_: (),
                                                    },
                                                },
                                            ],
                                            module: None,
                                            type_: (),
                                        },
                                    ],
                                    alternative_patterns: [],
                                    guard: None,
                                    then: String {
                                        location: SrcSpan {
                                            start: 151,
                                            end: 164,
                                        },
                                        value: "constructor",
                                    },
                                },
                                Clause {
                                    location: SrcSpan {
                                        start: 169,
                                        end: 181,
                                    },
                                    pattern: [
                                        Discard {
                                            name: "_",
                                            location: SrcSpan {
                                                start: 169,
                                                end: 170,
                                            },
                                            type_: (),
                                        },
                                    ],
                                    alternative_patterns: [],
                                    guard: None,
                                    then: String {
                                        location: SrcSpan {
                                            start: 174,
                                            end: 181,
                                        },
                                        value: "other",
                                    },
                                },
                            ],
                        },
                    ),
                ],
                publicity: Public,
                return_annotation: None,
                return_type: (),
            },
        ),
    ],
}
